syntax = "proto3";

option go_package = "tio.control.v1";

enum JobStatus {
    Ready = 0;
    BuildSucc = 1;
    BuildFailed = 2;
    BuildIng = 3;
    DeployIng = 4;
    DeploySuc = 5;
    DeployFailed = 6;
}

enum CommonRespCode {
    RespSucc = 0;
    RespFaild = -1;
}

message TioReply {
    CommonRespCode code = 1;
    string msg = 2;
}

message TioUserRequest {
    string name = 1;
    string passwd = 2;
}

message TioUserReply {
    CommonRespCode Code = 1;
    TioToken token = 2;
    TioUserInfo user = 3;
}

message TioUserInfo {
    int32 uid = 1;
}

message TioToken {
    string accessKey = 1;
    string secretKey = 2;
    string bucket = 3;
    string callBackUrl = 4;
}

message TioAgentRequest {
    string name = 1;
}

message TioAgentReply {
    CommonRespCode Code = 1;
    string address = 2;
}

message TioLogRequest {
    string name = 1;
    bool flowing = 2;
}

message TioLogReply {
    string message = 1;
}